--- a/3d-home-designer/package.json
+++ b/3d-home-designer/package.json
@@ -14,9 +14,11 @@
     "@react-three/fiber": "^9.4.0",
     "@tailwindcss/postcss": "^4.1.18",
     "lucide-react": "^0.555.0",
+    "openai": "^6.15.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "three": "^0.181.2"
+    "three": "^0.181.2",
+    "zustand": "^5.0.9"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
